attempting to align results map correctly

--- a/src/components/Search/SearchResults/ResultsView/ResultsView.css
+++ b/src/components/Search/SearchResults/ResultsView/ResultsView.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     align-items: stretch;
     justify-content: center;
+    height: 90vh;
 }
 .resultsList {
 
@@ -12,7 +13,7 @@
     align-content: center;
     align-items: stretch;
     width: 50%;
-    height: 100%;
+    height: 90vh;
 }
 
 @media screen and (max-width: 785px) {
